# Vestigium

./: .gitignore  .vesconfig  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ves
.github/workflows/: ci.yml
docs/: COMMANDS.md  IGNORE.md  INDEX.md  OBJECTS.md  README.md  REFS.md  REPOSITORY.md  STRESS_TESTS.md  TREE.md  UTILITIES.md
src/: cli.py  libves.py
src/commands/: add.py  cat_file.py  check_ignore.py  checkout.py  commit.py  hash_object.py  init.py  log.py  ls_files.py  ls_tree.py  rev_parse.py  rm.py  show_ref.py  status.py  tag.py
src/core/: index.py  objects.py  refs.py  repository.py  transaction.py
src/utils/: config.py  ignore.py  kvlm.py  status.py  transaction.py  tree.py
tests/: conftest.py  test_add.py  test_add_symlinks.py  test_cat_file.py  test_check_ignore.py  test_checkout.py  test_commit.py  test_hash_object.py  test_init.py  test_libves.py  test_log.py  test_ls_files.py  test_ls_tree.py  test_rev_parse.py  test_rm.py  test_show_ref.py  test_status.py  test_tag.py
tests/stress/: __init__.py  test_large_files.py  test_many_files.py  test_summary.py  test_utils.py
